--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,12 @@ body {
   display: flex;
   flex-direction: column;
 }
+textarea {
+  resize: none;
+}
+label {
+  font-weight: bold;
+}
 main {
   gap: 1rem;
   flex: 1;
@@ -31,9 +37,10 @@ header {
   background-color: darkgray;
   display: flex;
   flex-wrap: wrap;
-  align-items: stretch;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: center;
   padding: 0.5rem 1.5rem;
+  gap: 1rem;
 }
 header > button {
   align-self: center;
@@ -46,6 +53,18 @@ header > button {
 header > button:active {
   background-color: rgb(105, 160, 179);
   border: 2px solid gray;
+}
+header > button:hover {
+  cursor: pointer;
+}
+input,
+textarea {
+  border-radius: 3px;
+  outline: none;
+  border: none;
+}
+header input {
+  height: 1.5em;
 }
 aside {
   background-color: lightgray;
@@ -83,6 +102,9 @@ aside {
   padding: 2rem 1.5rem;
 }
 .cards {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
   padding: 0.5rem;
   height: 100%;
   width: 100%;
@@ -117,16 +139,69 @@ footer {
   box-shadow: 0 0 10px blue;
 }
 .delete-project {
+  user-select: none;
   position: absolute;
   cursor: pointer;
   background-color: red;
   font-weight: bold;
   top: -1.3rem;
-  right: 0;
+  right: 5px;
   border-radius: 5px 5px 0 0;
   padding: 2px 2px 0 2px;
 }
 .delete-project:active {
   background-color: rgb(248, 94, 94);
   color: darkgrey;
+}
+.project-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+}
+.project-header input {
+  border: 1px solid black;
+  border-radius: 3px;
+}
+.project-header button {
+  padding: 3px 10px;
+  color: white;
+  background-color: green;
+  outline: none;
+  border: 2px solid black;
+  border-radius: 3px;
+}
+.project-header button:hover {
+  cursor: pointer;
+}
+.project-header button:active {
+  background-color: greenyellow;
+  border: 2px solid grey;
+}
+.project-header textarea {
+  border: 1px solid black;
+  border-radius: 3px;
+}
+.project-body {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 1rem;
+}
+.todo-card {
+  position: relative;
+  box-shadow: 0 0 10px black;
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+.delete-todo {
+  user-select: none;
+  font-size: 0.8rem;
+  position: absolute;
+  cursor: pointer;
+  background-color: red;
+  font-weight: bold;
+  top: -17px;
+  right: 5px;
+  border-radius: 5px 5px 0 0;
+  padding: 2px 2px 0 2px;
 }
