--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,7 @@ aside {
   border-radius: 5px;
   box-shadow: 0 0 10px black;
   background-color: white;
+  overflow-y: auto;
 }
 footer {
   background-color: darkgray;
@@ -123,7 +124,7 @@ footer {
   font-weight: bold;
 }
 .project-card {
-  background-color: white;
+  background-color: rgb(240, 240, 240);
   border-radius: 5px;
   box-shadow: 0 0 10px black;
   padding: 5px;
@@ -137,6 +138,7 @@ footer {
 }
 .viewing {
   box-shadow: 0 0 10px blue;
+  background-color: white;
 }
 .delete-project {
   user-select: none;
@@ -186,6 +188,7 @@ footer {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 1rem;
+  grid-auto-rows: 80px;
 }
 .todo-card {
   position: relative;
